--- a/pillar.example
+++ b/pillar.example
@@ -22,3 +22,10 @@ pxe:
         xenial:
           archs:
             - amd64
+    preseed:
+      - source: salt://path
+        file: preseed-box-crypto-nightly.cfg:
+        os: debian
+        oscodename: stretch
+      
+      
